--- a/Pruebas_de_unidad.ipynb
+++ b/Pruebas_de_unidad.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {
         "id": "Vbv4Q1WIzJGi"
       },
@@ -56,12 +56,16 @@
         "\n",
         "    def div(self, a, b):\n",
         "        if b != 0:\n",
-        "            return a / b"
+        "            return a / b\n",
+        "\n",
+        "    def divent(self, a, b):\n",
+        "        if b != 0:\n",
+        "            return a // b"
       ],
       "metadata": {
         "id": "Bj2884KmzM0-"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -97,12 +101,19 @@
         "        self.calc = Calculator()\n",
         "        result = self.calc.div(10, 2)\n",
         "        expected = 5\n",
+        "        self.assertEqual(result, expected)\n",
+        "\n",
+        "    def test_divent(self):\n",
+        "        '''Test case function for division'''\n",
+        "        self.calc = Calculator()\n",
+        "        result = self.calc.divent(7, 2)\n",
+        "        expected = 3\n",
         "        self.assertEqual(result, expected)"
       ],
       "metadata": {
         "id": "BmO1ExRBzWRl"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -115,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n0oF9ToCzolJ",
-        "outputId": "1e9dff8e-b384-41d5-f224-491ac972131a"
+        "outputId": "9429051e-3bd9-42a1-c71e-c8e1d5c75fb1"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,13 +138,15 @@
             "Test case function for addition ... ok\n",
             "test_div (__main__.TestCalculator)\n",
             "Test case function for division ... ok\n",
+            "test_divent (__main__.TestCalculator)\n",
+            "Test case function for division ... ok\n",
             "test_mul (__main__.TestCalculator)\n",
             "Test case function for multiplication ... ok\n",
             "test_sub (__main__.TestCalculator)\n",
             "Test case function for subtraction ... ok\n",
             "\n",
             "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.015s\n",
+            "Ran 5 tests in 0.013s\n",
             "\n",
             "OK\n"
           ]
@@ -142,11 +155,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x7f10e034b450>"
+              "<unittest.main.TestProgram at 0x7f10e03f2e90>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 17
         }
       ]
     }
